fixed styling on forms and show page

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,27 @@
-<h1>Add a new post</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
 
-<%= render "posts/form" %>
+  <div class="container">
+    <div class="section">
+    	<div class="row">
+    		<div class="col s12 center">
+    		  <h3>New Goal</h3>
+    		</div>
+    	</div>
+      <div class="row">
+        <div class="col s12">
+					<div class="card-panel card-show lighten-5">
+						<%= render "posts/form" %>
+						<hr class="blue-grey lighten-4">
+						<%= link_to "< Back", main_path %>
+
+
+					</div>	
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
