--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,31 @@
-<h1>Signup</h1>
 
-<%= form_for :user do |form| %>
-	<%= form.text_field :name, placeholder: 'Enter Name' %>
-	<%= form.email_field :email, placeholder: 'Enter Email' %>
-	<%= form.password_field :password, placeholder: 'Enter Password' %>
-	<%= form.submit 'Signup' %>
-<% end %>
+
+
+  <div class="container">
+    <div class="section">
+    	<div class="row">
+    		<div class="col s12 center">
+    		  <h3>Sign Up</h3>
+    		</div>
+    	</div>
+      <div class="row">
+        <div class="col s12">
+					<div class="card-panel card-show lighten-5">
+						<%= form_for :user do |form| %>
+							<%= form.text_field :name, placeholder: 'Enter Name' %>
+							<%= form.email_field :email, placeholder: 'Enter Email' %>
+							<%= form.password_field :password, placeholder: 'Enter Password' %>
+							<%= form.submit 'Signup' %>
+						<% end %>
+						<hr class="blue-grey lighten-4">
+						<%= link_to "< Back", main_path %>
+
+
+					</div>	
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
