--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,8 +16,8 @@
     </div>
   </div>
 
-
-  <div class="container">
+<div style="width:100%" class="white">
+  <div class="container white">
     <div class="section">
 
       <!--   Icon Section   -->
@@ -51,4 +51,5 @@
       </div>
 
     </div>
+  </div>
   </div>
