--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div class="nav-buttons right">
 		  <% if @current_user %>
 		    <%= form_for :user, :url => logout_path, method: :delete do |form| %>
-		      <%= form.submit  'Logout', class: 'btn waves-effect waves-light two' %>
+		      <%= form.submit  'Logout', class: 'btn waves-effect waves-light amber' %>
 		   	<% end %>
 
 		  <% else %>
@@ -75,7 +75,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Kim
+      Made with ♥︎ by Kim
       </div>
     </div>
   </footer>
