--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,8 @@
     <div class="section">
     	<div class="row">
     		<div class="col s12 center">
-    		  <%= link_to '+ New Post', '/posts/new', class: 'btn waves-effect waves-light' %>
+    	
+    		  <a href="/posts/new"><button class="btn-large waves-effect waves-light amber addgoal">+ ADD GOAL</button></a>
     		</div>
     	</div>
       <div class="row">
@@ -17,9 +18,21 @@
 						<% if @posts %>
 							<% @posts.each do |post| %>
 								<div class="card-panel card-show white posts">
+								<div class="voting">
+									
+									
+								</div>
 								<div class="row white">
-									<strong><h4>&nbsp;&nbsp;<i class="material-icons blue-grey-text">mode_edit</i>&nbsp;&nbsp;<%= link_to post.title, post %></h4></strong>
+									<div class="col s5">
+										<strong><h4 style="margin-top:0">&nbsp;&nbsp;<i class="material-icons blue-grey-text">mode_edit</i>&nbsp;&nbsp;<%= link_to post.title, post %></h4></strong>
 									</div>
+									<div class="col s4">
+									<h6 style="font-size:18px">Priority: <b>1</b></h6>
+									</div>
+									<div class="col s3">
+									<h6 style="font-size:18px; font-weight:bolder">Deadline: <%= post.due %></h6>
+									</div>
+								</div>
 									<p><%= post.description %></p>
 									<em>-<%= post.user.name %></em><br>
 									<%= post.created_at.time.to_formatted_s(:long) %> 
