--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,5 +16,5 @@
 		<%= f.text_area :category %>
 	</div>
 
-	<%= f.submit  'Add Post', class: 'btn waves-effect waves-light' %>
+	<%= f.submit  'Add Goal!', class: 'btn-large waves-effect waves-light amber lighten-1' %>
 <% end %>
