--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
         <br><br>
         <h1 class="header center blue-grey-text text-darken-3">Dream Big with my.Life</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Make sure you always reach your goals</h5>
+          <h5 class="header col s12 light">Reach your goals every time!</h5>
         </div>
         <div class="row center">
-          <a href="/signup" class="btn-large waves-effect waves-light amber lighten-1">Sign Up Today</a>
+          <a href="/signup" class="btn-large waves-effect waves-light amber white-text">Sign Up Today</a>
         </div>
         <br><br>
 
