--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
 <body>
 
- <nav class="blue-grey darken-1" role="navigation">
+ <div class="blue-grey darken-1">
     <div class="container">
      <% if @current_user %>
       <a id="logo-container" href="/main" class="brand-logo">my.Life</a>
@@ -25,12 +25,12 @@
       <div class="nav-buttons right">
 		  <% if @current_user %>
 		    <%= form_for :user, :url => logout_path, method: :delete do |form| %>
-		      <%= form.submit  'Logout', class: 'btn waves-effect waves-light amber' %>
+		      <%= form.submit  'Logout', class: 'btn waves-effect waves-light amber white-text' %>
 		   	<% end %>
 
 		  <% else %>
-		  	<%= link_to 'Signup', '/signup', class: 'btn waves-effect waves-light amber' %>
-		    <%= link_to 'Login', '/login', class: 'btn waves-effect waves-light amber' %>
+		  	<%= link_to 'Signup', '/signup', class: 'btn waves-effect waves-light amber white-text' %>
+		    <%= link_to 'Login', '/login', class: 'btn waves-effect waves-light amber white-text' %>
 		  <% end %>
 		</div>
 
@@ -39,7 +39,7 @@
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+  </div>
 
   <%= yield %>
 
@@ -49,7 +49,17 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Contact Us</h5>
-          <p class="grey-text text-lighten-4"></p>
+          <p class="grey-text text-lighten-4">
+            <form style="width:75%; color:white">
+            <label for="name" style="color:white">Name</label>
+            <input id="name" type="text" style="border-bottom:1px solid white">
+
+
+             <label for="comment" style="color:white">Comment</label>
+            <input id="comment" type="text" style="border-bottom:1px solid white">
+
+            <input type="submit" class="btn waves-effect waves-light amber white-text">
+          </p>
 
 
         </div>
