--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,21 @@
  *= require_self
  */
 
+body {
+	background-image: url('tileable-wood.png');
+}
+
+#header {
+	height:40px;
+}
+a {
+	color:white;
+}
+
+a:hover {
+	border-bottom: 2px solid white;
+}
+
 
 .btn.waves-effect.waves-light {
 	background-color: rgba(141,148,252, .9);
