--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
 <body>
 
- <div class="blue-grey darken-1">
+ <nav class="blue-grey darken-1" role="navigation">
     <div class="container">
      <% if @current_user %>
       <a id="logo-container" href="/main" class="brand-logo">my.Life</a>
@@ -39,7 +39,7 @@
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
-  </div>
+  </nav>
 
   <%= yield %>
 
